samples/_failures_safe/1761076617_27e4b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50a4cd7f.c: In function ‘main’:
./samples/SAFE/__tmp_50a4cd7f.c:151:25: error: expected ‘)’ at end of input
  151 |     add_edge(&g, 3, 5, 6
      |             ~           ^
      |                         )
./samples/SAFE/__tmp_50a4cd7f.c:151:5: error: expected declaration or statement at end of input
  151 |     add_edge(&g, 3, 5, 6
      |     ^~~~~~~~
